# rootsacademy-container

./: README.md  pyproject.toml  run.py
.solution/: Dockerfile.alpine
rootsacademy_container/: printer.py
