[tool.poetry]
name = "rootsacademy-container"
version = "0.1.0"
description = ""
authors = ["Nico Gelders <nicolas.gelders@telenetgroup.be>"]
readme = "README.md"
packages = [{include = "rootsacademy_container"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
